--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,12 +9,31 @@ on:
       - main
 
 jobs:
+  test:
+    name: Unit testing
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm test 
+
   # ---------------------------
   # 1. Node.js Build & Test
   # ---------------------------
   build-and-test:
     name: Build & Test
     runs-on: ubuntu-latest
+    needs: test
 
     steps:
       - name: Checkout code
