--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,6 +101,15 @@ jobs:
       - name: Build Docker image
         run: docker build -t streamgen-ai:latest .
 
+      - name: Save docker artifact
+        run: docker save streamgen-ai:latest -o streamgen-ai.tar
+
+      - name: Uploading artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: streamgen-ai
+          path: streamgen-ai.tar
+
       - name: Scan Docker image
         uses: aquasecurity/trivy-action@master
         with:
@@ -108,7 +117,7 @@ jobs:
           severity: CRITICAL,HIGH
 
  
-  # Optional: Deploy to Docker Hub
+  Deploy to Docker Hub
  
   deploy:
     name: Deploy to Docker Hub
@@ -119,6 +128,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: streamgen-ai
+        
+      - name: load docker
+        run: docker load -i streamgen-ai.tar
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
