fix ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,7 +117,7 @@ jobs:
           severity: CRITICAL,HIGH
 
  
-  Deploy to Docker Hub
+  # Deploy to Docker Hub
  
   deploy:
     name: Deploy to Docker Hub
