--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,7 +105,7 @@ jobs:
   # Docker Build & Scan
  
   docker-build-and-scan:
-    name: Docker Build & Security Scan
+    name: Docker Build and Push & Security Scan 
     runs-on: ubuntu-latest
     needs: build-and-test
 
@@ -146,7 +146,7 @@ jobs:
   # Deploy to Docker Hub
  
   deploy:
-    name: Deploy to Docker Hub
+    name: Deploy to K8s 
     runs-on: ubuntu-latest
     needs: docker-build-and-scan
     if: github.ref == 'refs/heads/main'  # deploy only on main
