--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -150,34 +150,42 @@ jobs:
           exit-code: 0
           severity: CRITICAL,HIGH
 
+      - name: Snyk Container Scan
+        uses: snyk/actions/docker@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          image: streamgen-ai:latest
+          args: --severity-threshold=high
+
  
   # Deploy to Docker Hub
  
-  deploy:
-    name: Deploy to Docker Hub
-    runs-on: ubuntu-latest
-    needs: docker-build-and-scan
-    if: github.ref == 'refs/heads/main'  # deploy only on main
+  # deploy:
+  #   name: Deploy to Docker Hub
+  #   runs-on: ubuntu-latest
+  #   needs: docker-build-and-scan
+  #   if: github.ref == 'refs/heads/main'  # deploy only on main
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
       
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: streamgen-ai
+  #     - name: Download artifact
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: streamgen-ai
         
-      - name: load docker
-        run: docker load -i streamgen-ai.tar
+  #     - name: load docker
+  #       run: docker load -i streamgen-ai.tar
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+  #     - name: Log in to Docker Hub
+  #       uses: docker/login-action@v3
+  #       with:
+  #         username: ${{ secrets.DOCKER_USERNAME }}
+  #         password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push Docker image
-        run: |
-          docker tag streamgen-ai:latest ${{ secrets.DOCKER_USERNAME }}/streamgen-ai:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/streamgen-ai:latest
+  #     - name: Push Docker image
+  #       run: |
+  #         docker tag streamgen-ai:latest ${{ secrets.DOCKER_USERNAME }}/streamgen-ai:latest
+  #         docker push ${{ secrets.DOCKER_USERNAME }}/streamgen-ai:latest
