--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -185,8 +185,9 @@ jobs:
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: "http://localhost:3000"
-          cmd_options: "-a"
           fail_action: true  # fails on medium/high issues
+          rules_file_name: zap.yaml
+          cmd_options: '-J report_json.json -w report_md.md -r report_html.html -a'
 
       - name: Upload ZAP report
         uses: actions/upload-artifact@v4
