--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -160,54 +160,40 @@ jobs:
 
     # OWASP ZAP Baseline DAST Scan
   zap-dast:
-  name: OWASP ZAP DAST Scan
-  runs-on: ubuntu-latest
-  needs: docker-build-and-scan
+    name: OWASP ZAP DAST Scan
+    runs-on: ubuntu-latest
+    needs: docker-build-and-scan
 
-  steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Download Docker artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: streamgen-ai
+      - name: Download Docker artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: streamgen-ai
 
-    - name: Load Docker image
-      run: docker load -i streamgen-ai.tar
+      - name: Load Docker image
+        run: docker load -i streamgen-ai.tar
 
-    - name: Run container for DAST scan
-      run: |
-        docker run -d -p 3000:3000 --name app streamgen-ai:latest
-        sleep 12
+      - name: Run container for DAST scan
+        run: |
+          docker run -d -p 3000:3000 --name app streamgen-ai:latest
+          sleep 12
 
-    - name: Prepare ZAP YAML
-      run: |
-        cat << 'EOF' > zap.yaml
-rules:
-  - id: 10020
-    action: ignore
-  - id: 10021
-    action: ignore
-EOF
-        chmod 666 zap.yaml
+      - name: Run OWASP ZAP Baseline Scan
+        uses: zaproxy/action-baseline@v0.10.0
+        with:
+          target: "http://localhost:3000"
+          fail_action: true
+          rules_file_name: "security/zap.yaml"
+          cmd_options: '-J report_json.json -w report_md.md -r report_html.html -a'
 
-    - name: Run OWASP ZAP Baseline Scan
-      uses: zaproxy/action-baseline@v0.10.0
-      with:
-        target: "http://localhost:3000"
-        fail_action: true
-        rules_file_name: "zap.yaml"
-        cmd_options: "-J report_json.json -w report_md.md -r report_html.html -a"
-
-    - name: Upload ZAP report
-      uses: actions/upload-artifact@v4
-      with:
-        name: zap-report
-        path: |
-          report_json.json
-          report_md.md
-          report_html.html
+      - name: Upload ZAP report
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap-report
+          path: report_html.html
 
 
 
