--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -176,24 +176,33 @@ jobs:
       - name: Load Docker image
         run: docker load -i streamgen-ai.tar
 
-      - name: Run container for DAST scan
+      - name: Create Docker network
+        run: docker network create zapnet
+
+      - name: Run application container in zapnet
         run: |
-          docker run -d -p 3000:3000 --name app streamgen-ai:latest
+          docker run -d --network zapnet -p 3000:3000 --name app streamgen-ai:latest
           sleep 12
+
+      - name: Fix permissions for zap.yaml
+        run: chmod 644 security/zap.yaml
 
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.10.0
         with:
-          target: "http://localhost:3000"
+          target: "http://app:3000"
           fail_action: true
           rules_file_name: "security/zap.yaml"
           cmd_options: '-J report_json.json -w report_md.md -r report_html.html -a'
+        env:
+          GITHUB_WORKSPACE: ${{ github.workspace }}
 
       - name: Upload ZAP report
         uses: actions/upload-artifact@v4
         with:
           name: zap-report
           path: report_html.html
+
 
 
 
