--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -176,24 +176,21 @@ jobs:
       - name: Load Docker image
         run: docker load -i streamgen-ai.tar
 
-      - name: Create Docker network
-        run: docker network create zapnet
-
-      - name: Run application container in zapnet
+      - name: Run application container
         run: |
-          docker run -d --network zapnet -p 3000:3000 --name app streamgen-ai:latest
+          docker run -d -p 3000:3000 --name app streamgen-ai:latest
           sleep 12
 
       - name: Fix permissions for zap.yaml
-        run: chmod 644 security/zap.yaml
+        run: sudo chmod 666 security/zap.yaml
 
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.10.0
         with:
-          target: "http://app:3000"
+          target: "http://localhost:3000"
           fail_action: true
           rules_file_name: "security/zap.yaml"
-          cmd_options: '-J report_json.json -w report_md.md -r report_html.html -a'
+          cmd_options: "-J report_json.json -w report_md.md -r report_html.html -a"
         env:
           GITHUB_WORKSPACE: ${{ github.workspace }}
 
@@ -201,7 +198,11 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: zap-report
-          path: report_html.html
+          path: |
+            report_json.json
+            report_md.md
+            report_html.html
+
 
 
 
