--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,17 +183,17 @@ jobs:
           sleep 20
           docker logs app || true
 
-      - name: Copy zap.yaml to /tmp (writable directory)
+      - name: Copy zap.yaml into workspace root (ZAP can write here)
         run: |
-          cp security/zap.yaml /tmp/zap.yaml
-          chmod 666 /tmp/zap.yaml
+          cp security/zap.yaml zap-work.yaml
+          chmod 666 zap-work.yaml
 
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: "http://localhost:3000"
           fail_action: true
-          rules_file_name: "/tmp/zap.yaml"
+          rules_file_name: "zap-work.yaml"
           cmd_options: "-J report_json.json -w report_md.md -r report_html.html -a"
 
       - name: Upload ZAP report
@@ -204,6 +204,7 @@ jobs:
             report_json.json
             report_md.md
             report_html.html
+
 
   # Deploy to Docker Hub
  
