--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -180,23 +180,24 @@ jobs:
         run: |
           docker run -d -p 3000:3000 --name app streamgen-ai:latest
           echo "Waiting for app to start..."
-          sleep 20
+          sleep 15
           docker logs app || true
 
-      - name: Copy zap.yaml into workspace root (ZAP can write here)
+      # Prepare ZAP rules file (this is now the correct path & permission)
+      - name: Prepare ZAP rules file
         run: |
-          cp security/zap.yaml zap-work.yaml
-          chmod 666 zap-work.yaml
+          cp .zap/zap.yaml zap.yaml
+          chmod 644 zap.yaml
 
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: "http://localhost:3000"
           fail_action: true
-          rules_file_name: "zap-work.yaml"
+          rules_file_name: "zap.yaml"
           cmd_options: "-J report_json.json -w report_md.md -r report_html.html -a"
 
-      - name: Upload ZAP report
+      - name: Upload ZAP report artifacts
         uses: actions/upload-artifact@v4
         with:
           name: zap-report
@@ -206,13 +207,14 @@ jobs:
             report_html.html
 
 
+
   # Deploy to Docker Hub
  
   # deploy:
   #   name: Deploy to Docker Hub
   #   runs-on: ubuntu-latest
   #   needs: docker-build-and-scan
-  #   if: github.ref == 'refs/heads/main'  # deploy only on main
+    # if: github.ref == 'refs/heads/main'  deploy only on main
 
   #   steps:
   #     - name: Checkout code
