feat: OWASP ZAP Scan test for Juice-shop vuln. app

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -199,7 +199,7 @@ jobs:
 
       - name: File finding
         run: |
-          find -name / zap.yaml
+          find . -name "zap.yaml"
           pwd
 
       - name: Run OWASP ZAP Baseline Scan
