--- a/.zap/zap.yaml
+++ b/.zap/zap.yaml
@@ -1,5 +1,5 @@
 rules:
-  - id: 10020
-    action: ignore
-  - id: 10021
-    action: warn
+  - id: "10020"
+    action: "ignore"
+  - id: "10021"
+    action: "warn"
