--- a/.zap/zap.yaml
+++ b/.zap/zap.yaml
@@ -1,8 +1,3 @@
-- ruleId: "10010"
-  action: "ignore"
-
-- ruleId: "10020"
-  action: "warn"
-
-- ruleId: "10021"
-  action: "fail"
+rules:
+  - ruleId: "10010"
+    action: "ignore"
