fix: OWASP ZAP DAST Scan

--- a/.zap/zap.yaml
+++ b/.zap/zap.yaml
@@ -1,3 +1,7 @@
 rules:
   - ruleId: "10010"
-    action: "ignore"
+    action: ignore
+  - ruleId: "10020"
+    action: warn
+  - ruleId: "10021"
+    action: fail
