--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -195,8 +195,11 @@ jobs:
       - name: Copy ZAP rules file
         run: |
           pwd
+          mkdir -p /tmp/zap/rules
           mv .zap/zap.yaml /home/runner/work/DevSecOps/DevSecOps/zap.yaml
+          cp ./zap.yaml /tmp/zap/rules/rules.yaml
           chmod 777 zap.yaml
+          chmod 777 /tmp/zap/rules/rules.yaml
 
       - name: File finding
         run: |
@@ -207,7 +210,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.12.0
         with:
           target: "http://host.docker.internal:3000"
-          rules_file_name: "zap.yaml"        # MUST be filename only
+          rules_file_name: "/zap/rules/rules.yaml"        # MUST be filename only
           artifact_name: zap-report
           cmd_options: >-
             -J report_json.json
