fix: OWASP ZAP DAST Scan

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,7 +203,7 @@ jobs:
 
       - name: File finding
         run: |
-          find . -name "zap.yaml"
+          find . -name "rules.yaml"
           pwd
 
       - name: Run OWASP ZAP Baseline Scan
