--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -210,7 +210,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.12.0
         with:
           target: "http://host.docker.internal:3000"
-          rules_file_name: "zap/rules/rules.yaml"        # MUST be filename only
+          rules_file_name: "/zap/rules/rules.yaml"        # MUST be filename only
           artifact_name: zap-report
           cmd_options: >-
             -J report_json.json
