--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -192,23 +192,18 @@ jobs:
           done
 
       # Put zap.yaml inside the repo root (ZAP will see it inside /zap/wrk)
-      - name: Copy ZAP rules file
+      - name: Copy ZAP rules file to correct location
         run: |
-          pwd
-          mkdir -p /tmp/zap/rules
-          mv .zap/zap.yaml rules.yaml
-          chmod 777 rules.yaml
-
-      - name: File finding
-        run: |
-          find . -name "rules.yaml"
-          pwd
+          mkdir -p ~/.zap/rules
+          cp .zap/zap.yaml ~/.zap/rules/rules.yaml
+          chmod 644 ~/.zap/rules/rules.yaml
+          ls -la ~/.zap/rules/
 
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.12.0
         with:
           target: "http://host.docker.internal:3000"
-          rules_file_name: "rules.yaml"        # MUST be filename only
+          rules_file_name: "rules.yaml"        # just the filename
           artifact_name: zap-report
           cmd_options: >-
             -J report_json.json
