--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -202,7 +202,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.12.0
         with:
           target: "http://host.docker.internal:3000"
-          rules_file_name: "zap-rules.conf"          # now exists in repo root
+          rules_file_name: "zap-rules.tsv"          # now exists in repo root
           artifact_name: zap-scan-report
           cmd_options: -J report_json.json -w report_md.md -r report_html.html --autooff
 
