--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,31 +198,31 @@ jobs:
       #     cp .zap/zap.yaml ./zap.yaml
       #     ls -la zap.yaml
 
-      # - name: Run OWASP ZAP Baseline Scan
-      #   uses: zaproxy/action-baseline@v0.12.0
-      #   with:
-      #     target: "http://host.docker.internal:3000"
-      #     rules_file_name: "zap-rules.tsv"          # now exists in repo root
-      #     artifact_name: zap-scan-report
-      #     cmd_options: -J report_json.json -w report_md.md -r report_html.html --autooff
-
-      - name: Run OWASP ZAP Scan
-        uses: zaproxy/action-full-scan@v0.10.0
+      - name: Run OWASP ZAP Baseline Scan
+        uses: zaproxy/action-baseline@v0.12.0
         with:
-          target: 'http://localhost:3000' #Specify the endpoint of your application
-          allow_issue_writing: false
+          target: "http://localhost:3000"
+          rules_file_name: "zap-rules.tsv"          # now exists in repo root
+          artifact_name: zap-scan-report
+          cmd_options: -J report_json.json -w report_md.md -r report_html.html --autooff
 
-      # - name: Upload ZAP Reports
-      #   if: always()
-      #   uses: actions/upload-artifact@v4
+      # - name: Run OWASP ZAP Scan
+      #   uses: zaproxy/action-full-scan@v0.10.0
       #   with:
-      #     name: zap-report
-      #     path: |
-      #       report_json.json
-      #       report_md.md
-      #       report_html.html
-      #       zap.yaml
-      #     if-no-files-found: warn
+      #     target: 'http://localhost:3000' #Specify the endpoint of your application
+      #     allow_issue_writing: false
+
+      - name: Upload ZAP Reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap-report
+          path: |
+            report_json.json
+            report_md.md
+            report_html.html
+            zap.yaml
+          if-no-files-found: warn
 
 
 
