--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -163,6 +163,9 @@ jobs:
     name: OWASP ZAP DAST Scan
     runs-on: ubuntu-latest
     # needs: docker-build-and-scan
+    # permissions:
+    #   contents: write
+    #   issues: write
 
     steps:
       - name: Checkout code
@@ -191,19 +194,13 @@ jobs:
             sleep 2
           done
 
-      # Put zap.yaml inside the repo root (ZAP will see it inside /zap/wrk)
-      # - name: Copy ZAP rules to repository root
-      #   run: |
-      #     mkdir -p ~/.zap/rules
-      #     cp .zap/zap.yaml ./zap.yaml
-      #     ls -la zap.yaml
-
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.12.0
         with:
           target: "http://localhost:3000"
-          rules_file_name: "zap-rules.tsv"          # now exists in repo root
+          # rules_file_name: "zap-rules.tsv"
           artifact_name: zap-scan-report
+          allow_issue_writing: false
           cmd_options: -J report_json.json -w report_md.md -r report_html.html --autooff
 
       # - name: Run OWASP ZAP Scan
