--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -199,7 +199,8 @@ jobs:
         with:
           target: "http://localhost:3000"
           # rules_file_name: "zap-rules.tsv"
-          artifact_name: ""
+          # artifact_name: ""
+          artifact_name: none
           allow_issue_writing: false
           cmd_options: -J report_json.json -w report_md.md -r report_html.html --autooff
 
