fix: OWASP ZAP DAST Scan

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,13 +183,15 @@ jobs:
         run: |
           docker run -d --name app -p 3000:3000 streamgen-ai:latest
           echo "Waiting for app..."
-          for i in {1..30}; do
+          for i in {1..60}; do
             if curl -sf http://localhost:3000 >/dev/null 2>&1; then
               echo "App is ready!"
               break
             fi
+            echo "Attempt $i: Application not ready, retrying..."
             sleep 2
           done
+          echo "Application failed to start within expected time."
 
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.14.0
