--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - kubernetes/**
   pull_request:
     branches:
       - main
@@ -116,10 +118,16 @@ jobs:
     name: Docker Build & Security Scan
     runs-on: ubuntu-latest
     needs: build-and-test
+    outputs:
+      image_tag: ${{ steps.vars.outputs.TAG }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      
+      - name: Determine image tag
+        id: vars
+        run: echo "TAG=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -131,10 +139,10 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker buildx build --cache-from type=gha --cache-to type=gha,mode=max -t streamgen-ai:latest --load .
+        run: docker buildx build --cache-from type=gha --cache-to type=gha,mode=max -t streamgen-ai:${{ steps.vars.outputs.TAG }} --load .
 
       - name: Save docker artifact
-        run: docker save streamgen-ai:latest -o streamgen-ai.tar
+        run: docker save streamgen-ai:${{ steps.vars.outputs.TAG }} -o streamgen-ai.tar
 
       - name: Uploading artifact
         uses: actions/upload-artifact@v4
@@ -145,7 +153,7 @@ jobs:
       - name: Scan Docker image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: streamgen-ai:latest
+          image-ref: streamgen-ai:${{ steps.vars.outputs.TAG }}
           format: table
           exit-code: 0
           severity: CRITICAL,HIGH
@@ -155,7 +163,7 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          image: streamgen-ai:latest
+          image: streamgen-ai:${{ steps.vars.outputs.TAG }}
           args: --severity-threshold=medium
 
     # OWASP ZAP Baseline DAST Scan
@@ -178,7 +186,7 @@ jobs:
 
       - name: Start application
         run: |
-          docker run -d --name app -p 3000:80 streamgen-ai:latest
+          docker run -d --name app -p 3000:80 streamgen-ai:${{ needs.docker-build-and-scan.outputs.image_tag }}
           echo "Waiting for app..."
           for i in {1..60}; do
             if curl -sf http://localhost:3000 >/dev/null 2>&1; then
@@ -199,31 +207,64 @@ jobs:
 
   # Deploy to Docker Hub
  
-  # deploy:
-  #   name: Deploy to Docker Hub
-  #   runs-on: ubuntu-latest
-  #   needs: docker-build-and-scan
-    # if: github.ref == 'refs/heads/main'  deploy only on main
+  deploy:
+    name: Deploy to Docker Hub
+    runs-on: ubuntu-latest
+    needs: docker-build-and-scan
+    if: github.ref == 'refs/heads/main'
 
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       
-  #     - name: Download artifact
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         name: streamgen-ai
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: streamgen-ai
         
-  #     - name: load docker
-  #       run: docker load -i streamgen-ai.tar
+      - name: load docker
+        run: docker load -i streamgen-ai.tar
 
-  #     - name: Log in to Docker Hub
-  #       uses: docker/login-action@v3
-  #       with:
-  #         username: ${{ secrets.DOCKER_USERNAME }}
-  #         password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-  #     - name: Push Docker image
-  #       run: |
-  #         docker tag streamgen-ai:latest ${{ secrets.DOCKER_USERNAME }}/streamgen-ai:latest
-  #         docker push ${{ secrets.DOCKER_USERNAME }}/streamgen-ai:latest
+      - name: Push Docker image
+        run: |
+          docker tag streamgen-ai:${{ needs.docker-build-and-scan.outputs.image_tag }} ${{ secrets.DOCKER_USERNAME }}/streamgen-ai:${{ needs.docker-build-and-scan.outputs.image_tag }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/streamgen-ai:${{ needs.docker-build-and-scan.outputs.image_tag }}
+  
+  update-k8s:
+    name: Update Kubernetes Deployment
+    runs-on: ubuntu-latest
+    needs: [deploy]
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.TOKEN }}
+      
+      - name: Setup Git config
+        run: |
+          git config user.name "paripuranam"
+          git config user.email "paripuranam333@gmail.com"
+      
+      - name: Update Kubernetes deployment file
+        env:
+          NEW_IMAGE: paripuranam/streamgen-ai:${{ needs.docker-build-and-scan.outputs.image_tag }}
+        run: |
+          echo "Updating deployment to image: $NEW_IMAGE"
+
+          sed -i "s|image: .*|image: ${NEW_IMAGE}|g" kubernetes/deployment.yaml
+          
+          echo "Updated deployment file:"
+          grep "image:" kubernetes/deployment.yaml
+      
+      - name: Commit and push changes
+        run: |
+          git add kubernetes/deployment.yaml
+          git commit -m "Update Kubernetes deployment with new image tag: ${{ needs.docker-build-and-scan.outputs.image_tag }} [skip ci]" || echo "No changes to commit"
+          git push
