--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,10 +125,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Determine image tag
+      - name: Set image tag output
         id: vars
-        run: echo "TAG=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
-
+        run: echo "TAG=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_OUTPUT
+    
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
