--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -239,7 +239,7 @@ jobs:
   update-k8s:
     name: Update Kubernetes Deployment
     runs-on: ubuntu-latest
-    needs: [deploy]
+    needs: [deploy,docker-build-and-scan]
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
