Update Kubernetes deployment with new image tag: 0203e0c [skip ci]

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: streamgen-ai
-        image: paripuranam/streamgen-ai:
+        image: paripuranam/streamgen-ai:0203e0c
         ports:
         - containerPort: 80
