Fix: Image tag fetching issue

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -266,5 +266,5 @@ jobs:
       - name: Commit and push changes
         run: |
           git add kubernetes/deployment.yaml
-          git commit -m "Update Kubernetes deployment with new image tag: ${{ needs.docker-build-and-scan.outputs.image_tag }} [skip ci]" || echo "No changes to commit"
+          git commit -m "Update Kubernetes deployment with new image tag: ${{ needs.docker-build-and-scan.outputs.image_tag }}" || echo "No changes to commit"
           git push
